--- a/askdjango/templates/layout.html
+++ b/askdjango/templates/layout.html
@@ -9,7 +9,7 @@
 
     {% if user.is_authenticated %}
         <a href="{% url 'accounts:profile' %}">{{ user }}</a>
-        <a href="{% url 'accounts:logout' %}">로그아웃</a>
+        <a href="{% url 'accounts:logout' %}?next={{ request.path }}" onclick="return confirm('Are you suer?');">로그아웃</a>
     {% else %}
         회원가입
         <!-- ?next=: 다음 주소로 이동 -->
