--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,4 +1,4 @@
-{% extends 'accounts/layout.html' %}
+{% extends "accounts/layout.html" %}
 
 {% block content %}
     <form action="" method="post">
